--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/felip/eclipse-workspace/laboratorios/postgresql-42.7.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
